--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="profile">
         <img src="images/manish.png" alt="angela-profile-img">
         <h2>Hello.</h2>
-        <p class="intro">I am an iOS and Web Developer. I'm the founder and CTO of The App Brewery. I ❤️ coffee and brew my own beers.</p>
+        <p class="intro">I am an iOS and Web Developer. I'm the founder of Karwaan007. I ❤️ to code and Design creative things.</p>
       </div>
       <hr>
       <div class="skills">
