--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="images/manish.png" alt="angela-profile-img">
+        <img src="images/manish.png" alt="Manish-Talreja-Profile-Image">
         <h2>Hello.</h2>
         <p class="intro">I am an iOS and Web Developer. I'm the founder of Karwaan007. I ❤️ to code and Design creative things.</p>
       </div>
@@ -25,17 +25,25 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="code-img" src="https://media.giphy.com/media/3p50WGyUqeU5W/giphy.gif" alt="code-img">
+          <img class="code-img" src="images/webdevelopment.jpg" alt="Web-development">
 
-          <h3>Design & Development</h3>
-          <p>I started learning to code when I came to college. Before College, I knew nothing about coding, but afterwords coding became my life. Also I am an Intermediate in Adobe Photoshop and Adobe Premiere Pro for UI/Ux Design.</p>
+          <h3>Web Developer</h3>
+          <!-- <p>I started learning to code when I came to college. Before College, I knew nothing about coding, but afterwords coding became my life. Also I am an Intermediate in Adobe Photoshop and Adobe Premiere Pro for UI/Ux Design.</p> -->
+          <p>I'm a full-stack web developer. I love to mold ideas into reality. I'm adept in front-end development with Html, CSS, and Bootstrap. I can also work with latest technologies like FLutter and backend with python frameworks, firebase, and PHP.</p>
 
         </div>
         <div class="skill-row">
-          <img class="chilli-img" src="images/chillies.png" alt="chillies-img">
+          <img class="chilli-img" src="images/appdevelopment.jpg" alt="App-Development">
 
-          <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <h3>App Designer</h3>
+          <p>I'm well versed in Flutter app development. I have a serious passion for creative UI/UX effects, animations,  creative intuitive, and dynamic user experience.</p>
+
+        </div>
+        <br>
+        <div class="skill-row">
+          <img class="code-img" src="images/graphicdesign.png" alt="Graphic Design">
+          <h3>Digital Marketing</h3>
+          <p>I'm cognizant in analyzing social marketing strategies to gain more reach and leads from different social media platforms. I am the founder of Karwaan007 which has more than 35k followers.</p>
 
         </div>
       </div>
@@ -55,7 +63,7 @@
       <a class="footer-link" target="_blank" href="https://www.linkedin.com/in/manish-talreja-08753b149/">LinkedIn</a>
       <a class="footer-link" target="_blank" href="https://twitter.com/manish_talreja5">Twitter</a>
       <a class="footer-link" target="_blank" href="https://www.instagram.com/manish.talreja.50">Instagram</a>
-      <p class="copyright">© 2021 @Karwaan007.</p>
+      <p class="copyright">© 2021 @Manish Talreja</p>
     </div>
   </body>
 </html>
